# SDC-MPC-Quizzes

./: install-ubuntu-MPC.sh  install_ipopt.sh
global_kinematic_model/: CMakeLists.txt
global_kinematic_model/src/: main.cpp
mpc_to_line/: CMakeLists.txt
mpc_to_line/src/: MPC.cpp
polyfit/: CMakeLists.txt
